# audiobook_web_pl

./: .env.example  .eslintrc.cjs  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.tts  README.md  TODO.md  docker-compose.yml  package.json  tsconfig.base.json
apps/backend/: .eslintrc.json  package.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: index.ts
apps/backend/src/config/: env.ts
apps/backend/src/queues/: index.ts  ttsBatch.ts
apps/backend/src/routes/: index.ts
apps/backend/src/routes/modules/: admin.ts  auth.ts  pdf.ts  tts.ts  voice.ts
apps/backend/src/scripts/: seed.ts
apps/backend/src/services/: fileStorage.ts  security.ts  textProcessing.ts
apps/backend/src/tests/: textProcessing.test.ts
apps/backend/src/utils/: redis.ts
apps/frontend/: jest.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/dashboard/: page.tsx
apps/frontend/src/components/dashboard/: compliance-card.tsx  pdf-library-card.tsx  player-card.tsx  voice-models-card.tsx
apps/frontend/src/components/ui/: card.tsx  tabs.tsx
apps/frontend/src/lib/: query-client-provider.tsx
apps/frontend/src/store/: player-store.ts
apps/frontend/src/tests/: player-store.test.tsx
apps/tts-svc/: pyproject.toml
apps/tts-svc/tests/: test_status.py
apps/tts-svc/tts_svc/: main.py
data/: categories.json  users.json
docs/: PolskiLektorAI.postman_collection.json
public/: app.js  index.html  styles.css
src/: server.js
(+2 files in other folders)
