[project]
name = "tts-svc"
version = "0.1.0"
description = "Mikroserwis TTS dla Polski Lektor AI"
authors = [{name = "Polski Lektor AI"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.109.2",
  "uvicorn[standard]==0.27.1",
  "pydantic==2.6.1",
  "numpy==1.26.3",
  "torch==2.1.2",
  "coqpit==0.0.17",
  "coqui-tts==0.15.6",
  "soundfile==0.12.1",
  "python-multipart==0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest==8.0.0",
  "httpx==0.26.0",
  "ruff==0.2.0",
  "mypy==1.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"
